fix: fix a few minor bugs, updated the CHANGELOG, and added GitHub Actions CI/CD.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 target/
 *.class
 
-# Distribution
+# Distribution and Packages
 notething/dist/
 notething/target/
+notething/scripts/
+*.zip
 
 # IDE
 .idea/
