ci: allow build on fix branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build and Package NoTeThing
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, fix ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, fix ]
 
 jobs:
   build:
