feat: release version 0.3.0 - Cloud Sync, Trash Bin & Settings - Integrated Google Firebase for real-time note synchronization across devices with secure login. - Implemented soft delete with "Recycle Bin" view, allowing Restore and Permanent Delete actions. - Added a dedicated settings tab in Note List for Theme (System/Light/Dark), Cloud Sync, Acrylic effect, and Auto-hide title. - Updated README and CHANGELOG (EN/VN) to reflect v0.3.0 changes. - Added confirmation dialogs for critical actions; dynamic "Trash Bin" title in list view. - Upgraded to **Mali** font family with proper Bold/Italic rendering for future feature.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ target/
 # Distribution and Packages
 notething/dist/
 notething/target/
-notething/scripts/
 *.zip
 
 # IDE
@@ -22,3 +21,10 @@ Thumbs.db
 # Temporary files
 *.log
 *.tmp
+
+# Project plan
+plan/
+
+# Security
+.env
+serviceAccountKey.json
