--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,11 @@ name: Build and Package NoTeThing
 
 on:
   push:
-    branches: [ main, fix ]
+    branches: [ main, fix-v0.3.1 ]
     tags:
       - 'v*'
   pull_request:
-    branches: [ main, fix ]
+    branches: [ main, fix-v0.3.1 ]
 
 jobs:
   build:
